--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular-tabler-icons": "^2.7.0",
     "apexcharts": "^3.49.0",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "ng-apexcharts": "1.7.6",
     "ngx-cookie-service": "^19.1.0",
     "ngx-editor": "^18.0.0",
